--- a/spring-download/src/main/resources/application.yml
+++ b/spring-download/src/main/resources/application.yml
@@ -1,4 +1,15 @@
-
-spring.mvcstatic-path-pattern: /webapp/**
+spring:
+  jpa:
+    hibernate:
+      ddl-auto: update
+  h2:
+    console:
+      enabled: true
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:tcp://localhost/~/study
+    username: sa
+    password:
+  mvcstatic-path-pattern: /webapp/**
 
 file.path: ./files
