chunk reader -> processor -> writer

--- a/udemy-spring-batch/src/main/resources/application.yml
+++ b/udemy-spring-batch/src/main/resources/application.yml
@@ -4,6 +4,6 @@ spring:
     username: root
     password: 1234
 
-  batch:
-    jdbc:
-      initialize-schema: always
+#  batch:
+#    jdbc:
+#      initialize-schema: always
