spring cloud config - 동적으로 prorperty 변경 (actuator, busamqp)

--- a/spring-cloud-config/config-server/src/main/resources/application.yml
+++ b/spring-cloud-config/config-server/src/main/resources/application.yml
@@ -3,9 +3,14 @@ server:
 
 spring:
   application:
-    name: my-config-server
+    name: config-server
   cloud:
     config:
       server:
         git:
           uri: https://github.com/kimdh-hi/config-repo.git
+
+#  rabbitmq:
+#    addresses: localhost:5672
+#    username: guest
+#    password: guest
