--- a/spring-cloud-config/config-server/src/main/resources/application.yml
+++ b/spring-cloud-config/config-server/src/main/resources/application.yml
@@ -4,13 +4,15 @@ server:
 spring:
   application:
     name: config-server
+
   cloud:
     config:
       server:
         git:
           uri: https://github.com/kimdh-hi/config-repo.git
 
-#  rabbitmq:
-#    addresses: localhost:5672
-#    username: guest
-#    password: guest
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
