--- a/spring-cloud-config/test-service2/src/main/resources/application.yml
+++ b/spring-cloud-config/test-service2/src/main/resources/application.yml
@@ -1,16 +1,15 @@
 server:
-  port: 8081
+  port: 8082
 
 spring:
   application:
-    name: test-service-1
-
+    name: test-service-2
   config:
-    import: optional:configserver:http://localhost:8888/ # config-server
+    import: optional:configserver:http://localhost:8888/
   cloud:
     config:
-      name: config # 저장소의 config 파일이름
-      profile: dev # 사용 profile
+      name: config
+      profile: dev
 
   rabbitmq:
     host: localhost
@@ -23,4 +22,3 @@ management:
     web:
       exposure:
         include: "*"
-
