--- a/udemy-spring-batch/src/main/resources/application.yml
+++ b/udemy-spring-batch/src/main/resources/application.yml
@@ -4,6 +4,10 @@ spring:
     username: root
     password: 1234
 
+  batch:
+    job:
+      enabled: false
+
 #  batch:
 #    jdbc:
 #      initialize-schema: always
