feat: api gateway server custom config

--- a/spring-cloud-toy/api-gateway/src/main/resources/application.yml
+++ b/spring-cloud-toy/api-gateway/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
   application:
     name: api-gateway
 
-  cloud:
-    gateway:
-      discovery:
-        locator:
-          enabled: true
+#  cloud:
+#    gateway:
+#      discovery:
+#        locator:
+#          enabled: true
 #          lower-case-service-id: true
