--- a/spring-java-mail/src/main/resources/application.yml
+++ b/spring-java-mail/src/main/resources/application.yml
@@ -1,7 +1,18 @@
 spring:
   thymeleaf:
-    prefix: classpath:/static/mail_templates/
+    prefix: classpath:/static/templates/
     cache: false
+
+cloud:
+  aws:
+    credentials:
+      accessKey: ${aws_access_key}
+      secretKey: ${aws_secret_key}
+    region:
+      static: ap-northeast-2
+    stack:
+      auto: false
+
 aws-secret:
   access-key: ${aws_access_key}
   secret-key: ${aws_secret_key}
@@ -15,5 +26,4 @@ aws-secret:
 #      smtp.starttls.enable: true
 #      transport.protocol: smtp
 #      mime.charset: utf-8
-
 
