--- a/spring-jpa/jpa-basic/src/main/resources/application.yml
+++ b/spring-jpa/jpa-basic/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
-#  sql:
-#    init:
-#      data-locations: classpath:sql/data.sql
+  sql:
+    init:
+      data-locations: classpath:sql/data.sql
   datasource:
     url: jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE;
     username: sa
@@ -12,13 +12,13 @@ spring:
       enabled: true
       path: /h2-console
   jpa:
-    open-in-view: false
+    open-in-view: true
     hibernate.ddl-auto: create
     properties:
       hibernate:
         show_sql: false
         format_sql: true
-#    defer-datasource-initialization: true
+    defer-datasource-initialization: true
 
 logging:
   level:
