--- a/spring-jpa/jpa-basic/src/main/resources/application.yml
+++ b/spring-jpa/jpa-basic/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
       enabled: true
       path: /h2-console
   jpa:
-    open-in-view: true
+    open-in-view: false
     hibernate.ddl-auto: create
     properties:
       hibernate:
