feat(webflux-r2dbc-coroutine): user crud

--- a/spring-webflux-coroutine/webflux-r2dbc-postgres/src/main/resources/application.yml
+++ b/spring-webflux-coroutine/webflux-r2dbc-postgres/src/main/resources/application.yml
@@ -3,3 +3,9 @@ spring:
     url: r2dbc:postgresql://localhost:5432/postgres?schema=test_schema
     username: root
     password: root
+
+logging:
+  level:
+#    org.springframework.data.r2dbc: DEBUG
+    io.r2dbc.postgresql.QUERY: DEBUG # for queries
+    io.r2dbc.postgresql.PARAM: DEBUG # for parameters
