feat(spring-cache): cacheManager bean conflict test...

--- a/spring-cache/spring-redis/src/main/resources/application.yml
+++ b/spring-cache/spring-redis/src/main/resources/application.yml
@@ -25,6 +25,9 @@ spring:
     host: localhost
     port: 6379
 
+cache:
+  cache-name: redis
+
 logging:
   level:
     "[org.springframework.web.filter]": debug
