--- a/spring-batch/spring-batch-basic/src/main/resources/application.yml
+++ b/spring-batch/spring-batch-basic/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   batch:
     job:
-      names: {job.name:NONE}
+      names: ${job.name:NONE}
     initializa-schema: never
 
   datasource:
