feat(rabbitmq): prefetch

--- a/spring-jms/rabbitmq/rabbitmq-basic/lab2/consumer/src/main/resources/application.yml
+++ b/spring-jms/rabbitmq/rabbitmq-basic/lab2/consumer/src/main/resources/application.yml
@@ -1,3 +1,13 @@
-
 server:
   port: 8001
+
+spring:
+  main:
+    banner-mode: OFF
+  rabbitmq:
+    addresses: localhost
+    username: guest
+    password: guest
+    listener:
+      simple:
+        prefetch: 1
