feat(rabbitmq): setting prefetch count to multi-consumer (specific consumer)

--- a/spring-jms/rabbitmq/rabbitmq-basic/lab2/consumer/src/main/resources/application.yml
+++ b/spring-jms/rabbitmq/rabbitmq-basic/lab2/consumer/src/main/resources/application.yml
@@ -8,6 +8,6 @@ spring:
     addresses: localhost
     username: guest
     password: guest
-    listener:
-      simple:
-        prefetch: 1
+#    listener:
+#      simple:
+#        prefetch: 1
