--- a/spring-security/oauth-basic/src/main/resources/application.yml
+++ b/spring-security/oauth-basic/src/main/resources/application.yml
@@ -4,8 +4,23 @@ spring:
       client:
         registration:
           google:
+            clientName: google
             clientId: ${googleClientId}
             clientSecret: ${googleClientSecret}
+          naver:
+            clientName: naver
+            clientId: ${naverClientId}
+            clientSecret: ${naverClientSecret}
+#            redirect-uri: ${naverRedirectUri}
+#            authorization-grant-type: authorization_code
+#            scope: name, email, profile_image
+#            client-name: Naver
+#        provider:
+#          naver:
+#            authorization_uri: https://nid.naver.com/oauth2.0/authorize
+#            token_uri: https://nid.naver.com/oauth2.0/token
+#            user-info-uri: https://openapi.naver.com/v1/nid/me
+#            user_name_attribute: response
   sql:
     init:
       data-locations: classpath:sql/data.sql
