feat(oauth-basic): oauth test

--- a/spring-security/oauth-basic/src/main/resources/application.yml
+++ b/spring-security/oauth-basic/src/main/resources/application.yml
@@ -43,6 +43,10 @@ spring:
         format_sql: true
     defer-datasource-initialization: true
 
+jwt:
+  jwt-key: test-secretasdhuasid-ad01289sdhas9dh12=0-ddadasd
+  jwt-auth-token-expiry-hours: 12
+
 logging:
   level:
     "[org.springframework.web.filter]": debug
