--- a/spring-security/oauth-basic/src/main/resources/application.yml
+++ b/spring-security/oauth-basic/src/main/resources/application.yml
@@ -26,10 +26,11 @@ spring:
       data-locations: classpath:sql/data.sql
       mode: never
   datasource:
-    url: jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE;
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+    hikari:
+      driver-class-name: org.h2.Driver
+      jdbc-url: jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE;
+      username: sa
+      password:
   h2:
     console:
       enabled: true
