feat(rabbitmq): exchange json type message

--- a/spring-data-rest/spring-data-rest-demo/rabbitmq-service/src/main/resources/application.yml
+++ b/spring-data-rest/spring-data-rest-demo/rabbitmq-service/src/main/resources/application.yml
@@ -8,7 +8,11 @@
 rabbitmq:
   queue:
     name: test-queue
+    json:
+      name: json-queue
   exchange:
     name: test-exchange
   routing:
     key: test-key
+    json:
+      key: json-key
