feat(rabbitmq): get Callback when send to  invalid routing-key or invalid exchange

--- a/spring-jms/rabbitmq/rabbitmq-basic/lab2/producer/src/main/resources/application.yml
+++ b/spring-jms/rabbitmq/rabbitmq-basic/lab2/producer/src/main/resources/application.yml
@@ -1,2 +1,12 @@
 server:
   port: 8000
+
+spring:
+  rabbitmq:
+    addresses: localhost
+    username: guest
+    password: guest
+    publisher-confirm-type: correlated
+    publisher-returns: true
+    template:
+      mandatory: true
