--- a/lecture/fastcampus-spring-runner/divelog/src/main/resources/application.yml
+++ b/lecture/fastcampus-spring-runner/divelog/src/main/resources/application.yml
@@ -1,3 +1,13 @@
+spring:
+  profiles:
+    active:
+      - local
+    group:
+      local: "site-local,db-local"
+      dev: "site-dev,db-dev"
+    include:
+      - db
+      - site
 
 custom:
   random-value: "${random.value}"
