test(batch): batch text using SpringBatchTest, JobLauncherTestUtils

--- a/lecture/fastcampus-spring-batch/src/main/resources/application.yml
+++ b/lecture/fastcampus-spring-batch/src/main/resources/application.yml
@@ -29,3 +29,12 @@ spring:
   batch:
     jdbc:
       initialize-schema: ALWAYS
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: test
+  jpa:
+    database: h2
