--- a/lecture/fastcampus-spring-batch/src/main/resources/application.yml
+++ b/lecture/fastcampus-spring-batch/src/main/resources/application.yml
@@ -14,8 +14,9 @@ spring:
   sql:
     init:
       data-locations: classpath:sql/data.sql
+      mode: ALWAYS
   datasource:
-    url: jdbc:h2:mem:test
+    url:  jdbc:h2:tcp://localhost/~/study
     driver-class-name: org.h2.Driver
     username: sa
     password:
