feat(core): SpEL

--- a/spring-core/spring-core/src/main/resources/application.yml
+++ b/spring-core/spring-core/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 spring:
   sql:
     init:
@@ -29,3 +28,6 @@ logging:
     "[org.hibernate.SQL]": debug
     "[org.hibernate.type.descriptor.sql.BasicBinder]": trace
     "[com.toy]": debug
+
+custom:
+  number: 1
