--- a/lecture/fs-mysql/fs-mysql/src/main/resources/application.yml
+++ b/lecture/fs-mysql/fs-mysql/src/main/resources/application.yml
@@ -4,4 +4,5 @@ spring:
   datasource:
     username: root
     password:
-    url: jdbc:mysql://localhost:3306/fc_sns?rewriteBatchedStatements=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+    url: jdbc:mysql://localhost:3306/fc_sns?rewriteBatchedStatements=true&profileSQL=true&logger=Slf4JLogger&maxQuerySizeToLog=999999&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+#     url: jdbc:mysql://localhost:3306/fc_sns?rewriteBatchedStatements=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
