feat(redisson-lock): add amqp, test

--- a/spring-cache/redisson-distributed-lock/src/main/resources/application.yml
+++ b/spring-cache/redisson-distributed-lock/src/main/resources/application.yml
@@ -19,6 +19,12 @@ spring:
         show_sql: false
         format_sql: true
     defer-datasource-initialization: true
+  rabbitmq:
+    host: localhost
+    port: 5679
+    username : guest
+    password : guest
+
 
 redis:
   host: localhost
