feat(spring-integration): dlx requeue test

--- a/spring-integration/spring-integration-demo/src/main/resources/application.yml
+++ b/spring-integration/spring-integration-demo/src/main/resources/application.yml
@@ -1,12 +1,12 @@
-spring:
-  rabbitmq:
-    listener:
-      simple:
-        acknowledge-mode: auto
-        retry:
-          enabled: true
-          max-attempts: 3
-          max-interval: 1000
-          initial-interval: 1000
+#spring:
+#  rabbitmq:
+#    listener:
+#      simple:
+#        acknowledge-mode: auto
+#        retry:
+#          enabled: true
+#          max-attempts: 3
+#          max-interval: 1000
+#          initial-interval: 1000
 
 
