--- a/lecture/fs-pharmacy/pharmacy/docker-compose-local.yml
+++ b/lecture/fs-pharmacy/pharmacy/docker-compose-local.yml
@@ -13,5 +13,6 @@ services:
       - MARIADB_ROOT_PASSWORD=${SPRING_DATASOURCE_PASSWORD}
     volumes:
       - ./database/config:/etc/conf.d
+      - ./database/init:/docker-entrypoint-initdb.d
     ports:
       - "3306:3306"
