chore(graphql): restructure

--- a/spring-graphql/spring-webflux-graphql/spring-webflux-graphql/src/main/resources/application.yml
+++ b/spring-graphql/spring-webflux-graphql/spring-webflux-graphql/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   graphql:
     schema:
-      locations: classpath:graphql/sec01/lec05
+      locations: classpath:graphql/lec05
     path: /graphql
     graphiql:
       enabled: true
