--- a/lecture/inflearn-spring-security-oauth2/inflearn-spring-security-oauth2/src/main/resources/application.yml
+++ b/lecture/inflearn-spring-security-oauth2/inflearn-spring-security-oauth2/src/main/resources/application.yml
@@ -1,1 +1,23 @@
+server.port: 8081
 
+spring:
+  security:
+    oauth2:
+      client:
+        registration:
+          keycloak:
+            authorization-grant-type: authorization_code
+            client-id: oauth2-client-app
+            client-name: oauth2-client-app
+            client-secret: TiCWf75jvwgK6Q00ZC7a8uFyeiyLkJ4W
+            redirect-uri: http://localhost:8081/login/oauth2/code/keycloak
+            client-authentication-method: client_secret_post
+            scope: openid,profile,email
+        provider:
+          keycloak:
+            authorization-uri: http://localhost:8080/realms/oauth2/protocol/openid-connect/auth
+            issuer-uri: http://localhost:8080/realms/oauth2
+            jwt-set-uri: http://localhost:8080/realms/oauth2/protocol/openid-connect/certs
+            token-uri: http://localhost:8080/realms/oauth2/protocol/openid-connect/token
+            user-info-url: http://localhost:8080/realms/oauth2/protocol/openid-connect/userinfo
+            user-name-attribute: preferred_username
