--- a/spring-jpa/jpa-field-encrypt/jpa-field-encrypt/src/main/resources/application.yml
+++ b/spring-jpa/jpa-field-encrypt/jpa-field-encrypt/src/main/resources/application.yml
@@ -1,7 +1,9 @@
+server.port: 8081
+
 spring:
-  sql:
-    init:
-      data-locations: classpath:sql/data.sql
+#   sql:
+#     init:
+#       data-locations: classpath:sql/data.sql
   datasource:
     url: jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE;
     username: sa
@@ -18,7 +20,7 @@ spring:
       hibernate:
         show_sql: false
         format_sql: true
-    defer-datasource-initialization: true
+#     defer-datasource-initialization: true
 
 logging:
   level:
