--- a/spring-cloud/spring-cloud-lecture/api-gateway-service/src/main/resources/application.yml
+++ b/spring-cloud/spring-cloud-lecture/api-gateway-service/src/main/resources/application.yml
@@ -10,14 +10,14 @@ eureka:
 spring:
   application:
     name: api-gateway-service
-  cloud:
-    gateway:
-      routes:
-        - id: first-service
-          uri: http://localhost:8881
-          predicates:
-            - Path=/first-service/**
-        - id: second-service
-          uri: http://localhost:8882
-          predicates:
-            - Path=/second-service/**
+#   cloud:
+#     gateway:
+#       routes:
+#         - id: first-service
+#           uri: http://localhost:8881
+#           predicates:
+#             - Path=/first-service/**
+#         - id: second-service
+#           uri: http://localhost:8882
+#           predicates:
+#             - Path=/second-service/**
