feat(cloud): gateway filter

--- a/spring-cloud/spring-cloud-lecture/api-gateway-service/src/main/resources/application.yml
+++ b/spring-cloud/spring-cloud-lecture/api-gateway-service/src/main/resources/application.yml
@@ -32,3 +32,9 @@ spring:
             - Path=/second-service/**
           filters:
             - AddRequestHeader=second-req-header-key,second-req-header-value
+            - CustomFilter
+            - name: LoggingFilter
+              args:
+                baseMessage: LoggingFilter message
+                preLogger: true
+                postLogger: true
