--- a/spring-cloud/spring-cloud-lecture/spring-cloud-msa/user-service/src/main/resources/application.yml
+++ b/spring-cloud/spring-cloud-lecture/spring-cloud-msa/user-service/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
     url: jdbc:h2:mem:testdb
 eureka:
   instance:
-    instance-id: ${spring.application.name}:${spring.application.instance_id:${random:value}}
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     register-with-eureka: true
     fetch-registry: true
