--- a/lecture/inflearn-spring-security-oauth2/inflearn-spring-security-oauth2/src/main/resources/application.yml
+++ b/lecture/inflearn-spring-security-oauth2/inflearn-spring-security-oauth2/src/main/resources/application.yml
@@ -26,6 +26,14 @@ spring:
             redirect-uri: http://localhost:8081/login/oauth2/code/naver
             scope: profile,email
 
+          kakao:
+            client-id: ${kakaoClientId}
+            client-secret: ${kakaoClientSecret}
+            authorization-grant-type: authorization_code
+            client-name: client-app
+            redirect-uri: http://localhost:8081/login/oauth2/code/kakao
+            scope: openid,profile,email
+
         provider:
           keycloak:
             authorization-uri: http://localhost:8080/realms/oauth2/protocol/openid-connect/auth
@@ -40,6 +48,14 @@ spring:
             token-uri: https://nid.naver.com/oauth2.0/token
             user-info-uri: https://openapi.naver.com/v1/nid/me
             user-name-attribute: response
+
+          kakao:
+            issuer-uri: https://kauth.kakao.com # 아래 설정없이 이것만 설정해도 되는지 확인
+            authorization-uri: http://kauth.kakao.com/oauth/authorize
+            token-uri: http://kauth.kakao.com/oauth/token
+            user-info-uri: http://kapi.kakao.com/v1/oidc/userinfo
+            jwtSetUri: https://kauth.kakao.com/.well-known/jwks.json
+            user-name-attribute: id
   datasource:
     url: jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE;
     username: sa
