--- a/spring-cloud/spring-cloud-lecture/spring-cloud-msa/user-service/src/main/resources/application.yml
+++ b/spring-cloud/spring-cloud-lecture/spring-cloud-msa/user-service/src/main/resources/application.yml
@@ -21,5 +21,9 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka
 
+token:
+  expiration_time: 86400000
+  secret: secret
+
 greeting:
   message: welcome
