--- a/spring-cloud/spring-cloud-lecture/spring-cloud-msa/user-service/src/main/resources/application.yml
+++ b/spring-cloud/spring-cloud-lecture/spring-cloud-msa/user-service/src/main/resources/application.yml
@@ -21,6 +21,12 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh, health, beans
+
 # move to cloud-config
 # token:
 #   expiration_time: 86400000
