--- a/spring-graphql/spring-webflux-graphql/spring-webflux-graphql/src/main/resources/application.yml
+++ b/spring-graphql/spring-webflux-graphql/spring-webflux-graphql/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   graphql:
     schema:
-      locations: classpath:graphql/lec06
+      locations: classpath:graphql/lec10-interface
     path: /graphql
     graphiql:
       enabled: true
