feat(cloud): cloud config + amqp bus refresh properties

--- a/spring-cloud/spring-cloud-lecture/spring-cloud/api-gateway-service/src/main/resources/application.yml
+++ b/spring-cloud/spring-cloud-lecture/spring-cloud/api-gateway-service/src/main/resources/application.yml
@@ -10,6 +10,11 @@ eureka:
 spring:
   application:
     name: api-gateway-service
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
   cloud:
     gateway:
 #       default-filters:
@@ -95,8 +100,4 @@ management:
   endpoints:
     web:
       exposure:
-        include: refresh, health, beans, httptrace
-
-token:
-  expiration_time: 86400000
-  secret: secret
+        include: refresh, health, beans, httptrace, busrefresh
