--- a/spring-cloud/spring-cloud-lecture/spring-cloud-msa/user-service/src/main/resources/application.yml
+++ b/spring-cloud/spring-cloud-lecture/spring-cloud-msa/user-service/src/main/resources/application.yml
@@ -3,6 +3,11 @@ server.port: 0
 spring:
   application:
     name: user-service
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
   h2:
     console:
       enabled: true
@@ -25,7 +30,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: refresh, health, beans
+        include: refresh, health, beans, busrefresh
 
 # move to cloud-config
 # token:
