--- a/spring-cloud/spring-cloud-lecture/spring-cloud/config-server/config-server/src/main/resources/application.yml
+++ b/spring-cloud/spring-cloud-lecture/spring-cloud/config-server/config-server/src/main/resources/application.yml
@@ -3,8 +3,19 @@ server.port: 8888
 spring:
   application:
     name: config-server
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
   cloud:
     config:
       server:
         git:
           uri: file:///Users/daehyunkim/Documents/my/config-server
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, busrefresh
