--- a/spring-graphql/spring-webflux-graphql/spring-webflux-graphql/src/main/resources/application.yml
+++ b/spring-graphql/spring-webflux-graphql/spring-webflux-graphql/src/main/resources/application.yml
@@ -1,8 +1,10 @@
 spring:
   graphql:
     schema:
-      locations: classpath:graphql/lec12-mutation
+      locations: classpath:graphql/lec13-subscription
     path: /graphql
+    websocket:
+      path: /graphql
     graphiql:
       enabled: true
       path: /graphiql
