feat(cloud): call other micro-service using resttemplate

--- a/spring-cloud/spring-cloud-lecture/spring-cloud/config-server/config-server/src/main/resources/application.yml
+++ b/spring-cloud/spring-cloud-lecture/spring-cloud/config-server/config-server/src/main/resources/application.yml
@@ -13,6 +13,7 @@ spring:
       server:
         git:
           uri: file:///Users/daehyunkim/Documents/my/config-server
+          name: user-service
 
 management:
   endpoints:
