feat(graphql): get requestHeader using WebGraphQlInterceptor

--- a/spring-graphql/spring-webflux-graphql/spring-webflux-graphql/src/main/resources/application.yml
+++ b/spring-graphql/spring-webflux-graphql/spring-webflux-graphql/src/main/resources/application.yml
@@ -1,12 +1,14 @@
 spring:
   graphql:
     schema:
-      locations: classpath:graphql/lec14-error-handling
+      locations: classpath:graphql/lec04
     path: /graphql
     websocket:
       path: /graphql
     graphiql:
       enabled: true
       path: /graphiql
+  main:
+    allow-bean-definition-overriding: true
 
 logging.level.root: INFO
