--- a/spring-cache/spring-redis/src/test/resources/application.yml
+++ b/spring-cache/spring-redis/src/test/resources/application.yml
@@ -1,9 +1,6 @@
 spring:
+  cache:
+    type: REDIS
   redis:
     host: localhost
     port: 6379
-  profiles:
-    active: local
-
-cache:
-  cache-name: redis
