--- a/spring-jpa/jpa-fulltext/src/main/resources/application.yml
+++ b/spring-jpa/jpa-fulltext/src/main/resources/application.yml
@@ -1,17 +1,12 @@
 spring:
-  sql:
-    init:
-      data-locations: classpath:sql/data.sql
   datasource:
-    url: jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE;
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+    hikari:
+      driver-class-name: org.mariadb.jdbc.Driver
+      jdbc-url: jdbc:mariadb://localhost:3308/fulltextsearch-test?createDatabaseIfNotExist=true&serverTimezone=Asia/Seoul
+      username: root
+      password: 111111
   jpa:
+    database: mysql
     open-in-view: false
     hibernate.ddl-auto: create
     properties:
@@ -19,7 +14,9 @@ spring:
         show_sql: false
         format_sql: true
         dialect: com.toy.jpafulltext.config.MySql8DialectCustom
-    defer-datasource-initialization: true
+  jpa.defer-datasource-initialization: true
+  sql.init.mode: always
+  sql.init.data-locations: classpath:data.sql
 
 logging:
   level:
