--- a/spring-jpa/jpa-second-level-cache/src/main/resources/application.yml
+++ b/spring-jpa/jpa-second-level-cache/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+server.port: 8081
 spring:
   sql:
     init:
@@ -12,16 +13,12 @@ spring:
       enabled: true
       path: /h2-console
   jpa:
-    open-in-view: false
     hibernate.ddl-auto: create
     properties:
       hibernate:
         show_sql: false
         format_sql: true
-#   sql:
-#     init:
-#       data-locations: classpath:sql/data.sql
-#     defer-datasource-initialization: true
+    defer-datasource-initialization: true
 
 logging:
   level:
