--- a/spring-flyway/src/main/resources/application.yml
+++ b/spring-flyway/src/main/resources/application.yml
@@ -1,6 +1,28 @@
 server.port: 8081
 
 spring:
+  datasource:
+    hikari:
+      driver-class-name: org.mariadb.jdbc.Driver
+      jdbc-url: jdbc:mariadb://localhost:3308/flyway-test?createDatabaseIfNotExist=true&serverTimezone=Asia/Seoul
+      username: root
+      password: 111111
+  jpa:
+    database: mysql
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+        show_sql: false
+        format_sql: true
   flyway:
     enabled: true
     baseline-on-migrate: true
+    locations: classpath:/db/migration
+
+logging:
+  level:
+    "[org.springframework.web.filter]": debug
+    "[org.hibernate.SQL]": debug
+    "[org.hibernate.type.descriptor.sql.BasicBinder]": trace
+    "[com.toy]": debug
