--- a/spring-jpa/jpa-coroutine/src/main/resources/application.yml
+++ b/spring-jpa/jpa-coroutine/src/main/resources/application.yml
@@ -9,12 +9,11 @@ spring:
       enabled: true
       path: /h2-console
   jpa:
-    open-in-view: false
     hibernate.ddl-auto: create
     properties:
       hibernate:
-        show_sql: false
-        format_sql: true
+        show_sql: true
+        format_sql: false
 
 logging:
   level:
