feat(neo4j): neo4j connect(docker-compose), save test

--- a/spring-neo4j/src/main/resources/application.yml
+++ b/spring-neo4j/src/main/resources/application.yml
@@ -3,4 +3,7 @@ spring:
     neo4j:
       username: neo4j
       password: pass1234
+      database: neo4j
 
+
+log4j.category.org.springframework.data.neo4j: DEBUG
