--- a/spring-jpa/jpa-coroutine/src/main/resources/application.yml
+++ b/spring-jpa/jpa-coroutine/src/main/resources/application.yml
@@ -1,19 +1,20 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE;
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+    hikari:
+      driver-class-name: org.mariadb.jdbc.Driver
+      jdbc-url: jdbc:mariadb://localhost:3308/jpa-coroutine-test?createDatabaseIfNotExist=true&serverTimezone=Asia/Seoul
+      username: root
+      password: 111111
   jpa:
     hibernate.ddl-auto: create
     properties:
       hibernate:
         show_sql: true
-        format_sql: false
+        format_sql: true
+#   jpa.defer-datasource-initialization: true
+#   sql.init.mode: always
+#   sql.init.data-locations: classpath:/sql/data.sql
+
 
 logging:
   level:
