--- a/lecture/inflearn-spring-boot/project-v2/build.gradle
+++ b/lecture/inflearn-spring-boot/project-v2/build.gradle
@@ -20,6 +20,8 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation files('libs/memory-v2.jar')
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
