--- a/spring-jpa/spring-querydsl/src/main/resources/application.yml
+++ b/spring-jpa/spring-querydsl/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  sql:
+    init:
+      data-locations: classpath:sql/data.sql
   datasource:
     url: jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE;
     username: sa
@@ -16,6 +19,7 @@ spring:
         show_sql: false
         format_sql: true
         use_sql_comments: true
+    defer-datasource-initialization: true
 
 logging:
   level:
