--- a/spring-r2dbc/src/main/resources/application.yml
+++ b/spring-r2dbc/src/main/resources/application.yml
@@ -5,10 +5,6 @@ spring:
       jdbc-url: jdbc:mariadb://localhost:3308/jpa-r2dbc-test?createDatabaseIfNotExist=true&serverTimezone=Asia/Seoul
       username: root
       password: 111111
-  sql:
-    init:
-      data-locations: classpath:sql/data.sql
-    defer-datasource-initialization: true
   jpa:
     open-in-view: false
     hibernate.ddl-auto: create
@@ -20,6 +16,12 @@ spring:
     url: r2dbc:mariadb://localhost:3308/jpa-r2dbc-test
     username: root
     password: 111111
+
+  jpa.defer-datasource-initialization: true
+  sql:
+    init:
+      mode: always
+      data-locations: classpath:sql/data.sql
 
 logging:
   level:
