feat(inflearn-boot): properties

--- a/lecture/inflearn-spring-boot/external/src/main/resources/application.properties
+++ b/lecture/inflearn-spring-boot/external/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-
+url=local.db.com
+username=local.username
+password=local.password
+#---
+spring.config.activate.on-profile=prod
+url=prod.db.com
+username=prod.username
+password=prod.password
+#---
+spring.config.activate.on-profile=dev
+url=dev.db.com
+username=dev.username
+password=dev.password
