feat(inflearn-boot): read property-ConfigurationProperties-bind by constructor

--- a/lecture/inflearn-spring-boot/external-read/src/main/resources/application.properties
+++ b/lecture/inflearn-spring-boot/external-read/src/main/resources/application.properties
@@ -3,4 +3,4 @@ my.datasource.username=local-username
 my.datasource.password=local-password
 my.datasource.etc.max-connection=10
 my.datasource.etc.timeout=3000ms
-my.datasource.etc.options=optionA,optionB
+#my.datasource.etc.options=optionA,optionB
