--- a/lecture/inflearn-spring-boot/external-read/src/main/resources/application.properties
+++ b/lecture/inflearn-spring-boot/external-read/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 my.datasource.url=local.db.com
-my.datasource.username=local-username
+my.datasource.username=
 my.datasource.password=local-password
 my.datasource.etc.max-connection=10
 my.datasource.etc.timeout=3000ms
