feat(inflearn-boot): metrics

--- a/lecture/inflearn-spring-boot/actuator/src/main/resources/application.yml
+++ b/lecture/inflearn-spring-boot/actuator/src/main/resources/application.yml
@@ -12,3 +12,8 @@ management:
     health:
 #       show-details: always
       show-components: always
+
+server:
+  tomcat:
+    mbeanregistry:
+      enabled: true
