--- a/lecture/inflearn-spring-boot/actuator/build.gradle
+++ b/lecture/inflearn-spring-boot/actuator/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-actuator' //actuator 추가
+    implementation 'io.micrometer:micrometer-registry-prometheus' // 마이크로미터-프로메테우스
 
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
