feat(spring-aws): uploadHelper

--- a/spring-aws/src/main/resources/application.yml
+++ b/spring-aws/src/main/resources/application.yml
@@ -1,9 +1,8 @@
 cloud:
   aws:
-    stack:
-      auto: false
-    region:
-      static: us-east-1
+    stack.auto: false
+    s3.bucket: test-bucket
+    region.static: ap-northeast-2
     credentials:
       accessKey: ${awsAccessKey}
       secretKey: ${awsSecretKey}
