refactor(spring-aws): remove unnecessary bean config

--- a/spring-aws/src/main/resources/application.yml
+++ b/spring-aws/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 cloud:
   aws:
     stack.auto: false
-    s3.bucket: test-bucket
+    s3.bucket: dhkimtestbucket
     region.static: ap-northeast-2
     credentials:
       accessKey: ${awsAccessKey}
