--- a/spring-jpa/jpa-emoji/src/main/resources/application.yml
+++ b/spring-jpa/jpa-emoji/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
         password: 111111
   jpa:
     database: mysql
-    hibernate.ddl-auto: none
+    hibernate.ddl-auto: create
     open-in-view: true
     properties:
       hibernate:
