--- a/lecture/udemy-webflux-msa/order-service/src/main/resources/application.yml
+++ b/lecture/udemy-webflux-msa/order-service/src/main/resources/application.yml
@@ -1,3 +1,3 @@
 server.port: 8091
-user.service-url: http://localhost:8092/users/
-product.service-url: http://localhost:8093/products/
+user.service-url: http://localhost:8092/users
+product.service-url: http://localhost:8093/products
