--- a/spring-api-doc/spring-swagger_restdocs/src/main/resources/application.yml
+++ b/spring-api-doc/spring-swagger_restdocs/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+server.port: 8082
+
 springdoc:
   default-consumes-media-type: application/json;charset=UTF-8
   default-produces-media-type: application/json;charset=UTF-8
