--- a/spring-mvc/src/main/resources/application.yml
+++ b/spring-mvc/src/main/resources/application.yml
@@ -1,5 +1,29 @@
+
 spring:
   data:
     web:
       pageable:
-        one-indexed-parameters: trued
+        one-indexed-parameters: true
+  datasource:
+    url: jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE;
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+  jpa:
+    hibernate.ddl-auto: create
+    properties:
+      hibernate:
+        show_sql: false
+        format_sql: true
+    defer-datasource-initialization: true
+
+logging:
+  level:
+    "[org.springframework.web.filter]": debug
+    "[org.hibernate.SQL]": debug
+    "[org.hibernate.type.descriptor.sql.BasicBinder]": trace
+    "[com.toy]": debug
