feat(jpa): [solve] only null field embedded type deserialize issue

--- a/spring-jpa/jpa-basic/src/main/resources/application.yml
+++ b/spring-jpa/jpa-basic/src/main/resources/application.yml
@@ -18,6 +18,7 @@ spring:
         ddl-auto: create
         dialect: org.hibernate.dialect.H2Dialect
         format_sql: true
+        create_empty_composites.enabled: true
       org.hibernate.envers:
         audit_table_suffix: _h
         store_data_at_delete: true
