--- a/spring-jpa/jpa-folder/src/main/resources/application.yml
+++ b/spring-jpa/jpa-folder/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
-  sql:
-    init:
-      data-locations: classpath:sql/data.sql
+#   sql:
+#     init:
+#       data-locations: classpath:sql/data.sql
   datasource:
     url: jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE;
     username: sa
