feat(swagger): swagger-ui auto expansion off

--- a/spring-api-doc/swagger/src/main/resources/application.yml
+++ b/spring-api-doc/swagger/src/main/resources/application.yml
@@ -9,3 +9,4 @@ springdoc:
     tags-sorter: alpha
     path: /swagger-ui-custom.html
     disable-swagger-default-url: true
+    doc-expansion: none
