docs(redis): spring data redis-elasticCache keyspaceNotification

--- a/spring-cache/spring-redis-event/spring-redis-event/src/main/resources/application.yml
+++ b/spring-cache/spring-redis-event/spring-redis-event/src/main/resources/application.yml
@@ -30,3 +30,6 @@ logging:
     "[org.hibernate.SQL]": debug
     "[org.hibernate.type.descriptor.sql.BasicBinder]": trace
     "[com.toy]": debug
+    org.springframework.data.redis: DEBUG
+    io.lettuce.core: DEBUG
+
