--- a/spring-actuator/src/main/resources/application.yml
+++ b/spring-actuator/src/main/resources/application.yml
@@ -10,6 +10,7 @@ management:
     java.enabled: true
     os.enabled: true
     env.enabled: true # info 하위 항목 출력
+    build.enabled: true
 
 info:
   app:
