--- a/spring-actuator/src/main/resources/application.yml
+++ b/spring-actuator/src/main/resources/application.yml
@@ -11,6 +11,7 @@ management:
     os.enabled: true
     env.enabled: true # info 하위 항목 출력
     build.enabled: true
+    git.mode: "full"
 
 info:
   app:
