--- a/spring-cloud/spring-cloud-bus/src/main/resources/application.yml
+++ b/spring-cloud/spring-cloud-bus/src/main/resources/application.yml
@@ -6,3 +6,9 @@ spring:
     username: guest
     password: guest
     virtual-host: /
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
