--- a/spring-openfeign/spring-openfeign-sample/serviceB/build.gradle
+++ b/spring-openfeign/spring-openfeign-sample/serviceB/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
+	implementation("io.github.openfeign:feign-jackson:13.1")
 	implementation 'org.jetbrains.kotlin:kotlin-reflect'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
