docs(boot3): boot 3.2.x enum data type

--- a/spring-boot3/src/main/resources/application.yml
+++ b/spring-boot3/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
     open-in-view: false
     properties:
       hibernate:
-        show_sql: false
+        show_sql: true
         format_sql: true
 
 custom:
