feat(scheduler): cron tab using property

--- a/spring-scheudler/spring-scheduler/src/main/resources/application.yml
+++ b/spring-scheudler/spring-scheduler/src/main/resources/application.yml
@@ -1,1 +1,8 @@
-spring.task.scheduling.pool.size: 5
+spring:
+  task:
+    scheduling:
+      pool.size: 5
+
+schedulers:
+  cron:
+    test-job: 0 11 11 * * *
