--- a/spring-jpa/spring-data-envers/src/main/resources/application.yml
+++ b/spring-jpa/spring-data-envers/src/main/resources/application.yml
@@ -4,14 +4,16 @@ spring:
     init:
       data-locations: classpath:sql/data.sql
   datasource:
-    url: jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE;
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+    url: jdbc:mariadb://localhost/test?createDatabaseIfNotExist=true
+    username: root
+    password: 111111
+    hikari:
+      maximum-pool-size: 5
+      minimum-idle: 5
+      connection-timeout: 3000
+      max-lifetime: 1800000
+      connection-test-query: SELECT 1
+      validation-timeout: 5000
   jpa:
     hibernate.ddl-auto: create
     properties:
