--- a/spring-cloud/spring-distributed-tracing/distributedTracingTestServiceB/src/main/resources/application.yml
+++ b/spring-cloud/spring-distributed-tracing/distributedTracingTestServiceB/src/main/resources/application.yml
@@ -12,7 +12,6 @@ management:
     tracing:
       endpoint: http://localhost:9411/api/v2/spans
 
-
 logging:
   pattern:
-    level: "[%X{traceId:-},%X{spanId:-}]"
+    level: "%5p [%X{traceId:-},%X{spanId:-}]"
