--- a/spring-batch/spring-batch-lecture-inflearn/spring-batch/src/main/resources/application.yml
+++ b/spring-batch/spring-batch-lecture-inflearn/spring-batch/src/main/resources/application.yml
@@ -1,4 +1,4 @@
-spring.profiles.active: h2
+spring.profiles.active: mariadb
 ---
 spring:
   config:
@@ -22,3 +22,5 @@ spring:
   batch:
     jdbc:
       initialize-schema: ALWAYS
+    job:
+      enabled: false
