feat(batch): tasklet

--- a/spring-batch/spring-batch-lecture-inflearn/spring-batch/src/main/resources/application.yml
+++ b/spring-batch/spring-batch-lecture-inflearn/spring-batch/src/main/resources/application.yml
@@ -21,6 +21,6 @@ spring:
     password: 111111
   batch:
     jdbc:
-      initialize-schema: NEVER
+      initialize-schema: ALWAYS
 #    job:
 #      enabled: false
