--- a/lecture/udemy-spring-cloud-stream/springcloudstream/src/main/resources/application-sec01.yaml
+++ b/lecture/udemy-spring-cloud-stream/springcloudstream/src/main/resources/application-sec01.yaml
@@ -1,3 +1,16 @@
+#spring:
+#  cloud:
+#    function:
+#      definition: function
+#    stream:
+#      bindings:
+#        consumer-in-0:
+#          destination: input-topic
+#          group: some-group
+#        function-in-0:
+#          destination: input-topic
+#          group: some-group
+
 spring:
   cloud:
     function:
@@ -10,3 +23,18 @@ spring:
         function-in-0:
           destination: input-topic
           group: some-group
+      kafka:
+        bindings:
+          consumer-in-0:
+            consumer:
+              configuration:
+                "group.instance.id": "test.instance.id111-consumer"
+          function-in-0:
+            consumer:
+              configuration:
+                "group.instance.id": "test.instance.id111-function"
+#      kafka:
+#        binder:
+#          consumer-properties:
+#            "group.instance.id": "test.instance.id"
+
