--- a/spring-kotlin/src/main/resources/application.yml
+++ b/spring-kotlin/src/main/resources/application.yml
@@ -1,3 +1,13 @@
 spring:
   application:
     name: spring-kotlin
+  datasource:
+    url: jdbc:h2:mem:testdb
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+    hikari:
+      connection-test-query: SELECT 1
+  mvc:
+    problemdetails:
+      enabled: true
