--- a/spring-jpa/jpa-core/src/main/resources/application.yml
+++ b/spring-jpa/jpa-core/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
       connection-timeout: 3000
       connection-test-query: SELECT 1
   jpa:
-    hibernate.ddl-auto: create-drop
+    hibernate.ddl-auto: none
     open-in-view: false
     defer-datasource-initialization: true
     properties:
