--- a/spring-boot3/gradle.properties
+++ b/spring-boot3/gradle.properties
@@ -1,6 +1,6 @@
 kotlin.code.style=official
 
 kotlinVersion=1.9.25
-springBootVersion=3.5.0
-springCloudVersion=2025.0.0-RC1
+springBootVersion=3.5.3
+springCloudVersion=2025.0.0
 dependencyManagementVersion=1.1.7
