--- a/spring-boot3/src/main/resources/application.yml
+++ b/spring-boot3/src/main/resources/application.yml
@@ -22,5 +22,9 @@ spring:
     reactiveclient:
       connect-timeout: 3s
       read-timeout: 30s
+
+server:
+  tomcat:
+    max-part-header-size: 512B
 custom:
   my-key: ${myValue}
